--- a/src/assets/components/CardGroup/Card.css
+++ b/src/assets/components/CardGroup/Card.css
@@ -2,10 +2,14 @@
     width: 100%;
     
 }
+figure{
+    width: 360px;
+    max-height: 360px;
+}
 .card-img{
     width: 100%;
+    height: 280px;
     border-radius: 16px;
-
 }
 
 .card-details{
