estilos: quedo feo igual xd

--- a/src/assets/components/Nav/Nav.css
+++ b/src/assets/components/Nav/Nav.css
@@ -5,6 +5,12 @@
     padding: 1rem 2rem;
 }
 
+.airlogo{
+    fill: red;
+    width: 3rem;
+}
+
+
 .btn-search{
     width: 240px;
     height: 40px;
