--- a/src/assets/components/CardGroup/CardGroup.css
+++ b/src/assets/components/CardGroup/CardGroup.css
@@ -1,3 +1,9 @@
+.section-header{
+    display:flex;
+    justify-content: space-between;
+    margin: 2rem;
+}
+
 .card-list{
     display: grid;
     grid-template-columns: repeat(auto-fill, 360px);
